--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,53 @@
 body {
     font-family: Roboto;
     font-size: 18px;
-    color: #E5E7EB;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
-header, .top {
+header, .top, footer{
     background-color: #1F2937;
+}
+
+.quote {
+    background-color: #E5E7EB;
+}
+
+.quote-text {
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937
+}
+
+ul {
+    display: flex;
+    justify-content: space-between;
+}
+
+.title {
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+}
+
+.secondary {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.logo {
+    font-size: 24px;
+    color: #F9FAF8;
+}
+
+.button {
+    color: #3882F6;
+}
+
+.info-title {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
 }
